--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -2,8 +2,18 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
+  background: linear-gradient(#2a00b7, #42006c);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
-h1 {
-  color: blue;
+.container {
+  display: flex;
+  flex-direction: column;
+  background: #f7f7f7;
+  padding-bottom: 30px;
+  width: 600px;
+  border-radius: 10px;
 }
